--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
 		</h1>
 	</header>
 	<section class="sites" role="main">
-		<ul class="reset-ul sites-ul">
-			<li><img src="./img/sites/1.jpg" alt=""/></li>
-			<li><img src="./img/sites/2.jpg" alt=""/></li>
-			<li><img src="./img/sites/3.jpg" alt=""/></li>
-			<li><img src="./img/sites/4.jpg" alt=""/></li>
-			<li><img src="./img/sites/5.jpg" alt=""/></li>
-			<li><img src="./img/sites/6.jpg" alt=""/></li>
-			<li><img src="./img/sites/7.jpg" alt=""/></li>
-			<li><img src="./img/sites/8.jpg" alt=""/></li>
-			<li><img src="./img/sites/9.jpg" alt=""/></li>
-			<li><img src="./img/sites/10.jpg" alt=""/></li>
-			<li><img src="./img/sites/11.jpg" alt=""/></li>
-			<li><img src="./img/sites/12.jpg" alt=""/></li>
-			<li><img src="./img/sites/13.jpg" alt=""/></li>
-			<li><img src="./img/sites/14.jpg" alt=""/></li>
-			<li><img src="./img/sites/15.jpg" alt=""/></li>
-			<li><img src="./img/sites/16.jpg" alt=""/></li>
+		<ul id="slider" class="reset-ul sites-ul">
+			<li><img src="./img/sites/1.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/2.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/3.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/4.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/5.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/6.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/7.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/8.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/9.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/10.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/11.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/12.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/13.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/14.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/15.jpg" alt=""/></li><!--
+			--><li><img src="./img/sites/16.jpg" alt=""/></li>
 		</ul>
 		<div class="create-btn-block">
 			<a href="//www.ucoz.ru/register" target="_blank" class="button">Создать сайт бесплатно</a>
