--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</h1>
 	</header>
 	<section class="sites" role="main">
-		<ul id="slider" class="reset-ul sites-ul">
+		<ul id="slider" class="reset-ul sites-ul transitioned">
 			<li><img src="./img/sites/1.jpg" alt=""/></li><!--
 			--><li><img src="./img/sites/2.jpg" alt=""/></li><!--
 			--><li><img src="./img/sites/3.jpg" alt=""/></li><!--
